@@ -1,3 +1,11 @@
+2001-11-07  Bernhard Held  <bernhard@bernhardheld.de>
+
+	* sdcc/sim/ucsim/globals.cc: New: IXRAM.
+
+	* sdcc/sim/ucsim/stypes.h: New: IXRAM.
+
+	* sdcc/sim/ucsim/s51.src/uc390.cc: New: IXRAM.
+
 2001-11-07  Michael Hope  <michaelh@juju.net.nz>
 
 	* src/z80/ralloc.c (packRegsForHLUse): Banned IFXs from being packed into HL.
